--- a/languages/English/Full description.txt
+++ b/languages/English/Full description.txt
@@ -1,4 +1,4 @@
-Droid Dashcam is a great driving video recorder (dashboard camera) app for car/vehicle drivers which can continuously record videos in loop mode, add subtitles with needed information directly on those videos (read below) and record in background
+Droid Dashcam is a great driving video recorder (dashboard camera) app for car/vehicle drivers which can continuously record videos in loop mode, add subtitles with needed information directly on those videos (read below) and record in background, autostart recording and much more.
 
 Features:
 
@@ -7,30 +7,42 @@ Features:
 - Location Address
 - GPS Coordinates
 - Speed (based on GPS data)
+- Vehicle registration plate (car number)
 
 * Background Video Recording - you can continue recording in background and use other apps which doesn't use camera. You can also use notification panel to start/stop recording while this app is running in background.
 
-* Loop Recording - Auto Deleting old video files when there is not enough space for new videos (you can set max space usage for all videos)
+* Loop Recording - auto deleting old video files when there is not enough space for new videos (you can set max space usage for all videos)
 
-* Options for autostarting recording on charging on/off, on system boot, on Bluetooth device connection/disconnection, or on app launch
+* Options for autostarting recording on charging on/off, on system boot, on Bluetooth device connection/disconnection, AUX-cable connection, or on app launch
 
-* Small (Lightweight) app size, native stable recorder module with video and optical stabilization enabled (if your devices supports it)
+* Small (Lightweight) app size
+
+* Automatic change of day and night video recording mode
 
 * Landscape and Portrait Orientations for video recording
 
-* Share/Upload Videos
+* Share or upload a selected video to various services
 
 * Recording in Shared Movies folder or App owned folders (phone and external SDcard storages) - can be set in the settings
 
 * Lock videos from overwriting (G-shock sensor) on impact detection
 
-* Videos Screen which allows selecting video you want and playing it using any video player app, deleting selected videos, video files are grouped by folders (each recording day)
+* Videos Screen which allows selecting video you want and playing it using any video player app you have, deleting selected videos
 
-* Easy to use, simple UI
+* Easy to use, simple UI, the configuration of the buttons displayed on the screen, etc.
 
-* Camera selection - you can use any camera for recording (rear/front) and some devices allows to choose camera with wide-angle lens
+* Camera selection - you can use any camera for recording (rear/front) but only some devices allows to choose camera with wide-angle lens
+
+* Taking photos
+
+* Floating window with control buttons on top of all applications
 
 * FAQ * https://github.com/HelgeApps/droid_dashcam_faq/wiki/en - answers to frequent questions or feature requests like  
 - Video Stabilization (EIS, Electronic stabilization) is not available in the app
 - Multiple cameras / wide lens camera not available in the app
 - Battery usage is high, battery drains fast, device becomes hot
+
+* Language of app
+If you wish to help translate app to your language, then you can find existing languages at
+https://github.com/HelgeApps/droid_dashcam_faq/tree/main/languages
+Use whatever language you know to translate into your language
