--- a/languages/Russian/Full description.txt
+++ b/languages/Russian/Full description.txt
@@ -41,3 +41,8 @@ Droid Dashcam - полезное приложение для записи вид
 - Стабилизация видео недоступна в приложении
 - Несколько камер / широкоугольная камера недоступна в приложении
 - Батарея разряжается быстро, устройство нагревается
+
+* Язык приложения
+Если вы хотите помочь в переводе приложения на свой язык, то вы можете найти существующие языки по ссылке
+https://github.com/HelgeApps/droid_dashcam_faq/tree/main/languages
+Используйте любой язык, который вы знаете, для перевода на свой язык
